--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket-item/restaurant-basket-item.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket-item/restaurant-basket-item.component.html
@@ -6,7 +6,7 @@
   <p> {{order.ingredients}}</p>
 </div>
 <div class="third-section">
-  <p> Dodaj notatkę</p>
+  <p> {{getTranslate('edit')}}</p>
   <div class="quantity">
     <button (click)="removeOne()">
       <i class="fa-solid fa-minus"></i>
