added mat-dialog and mat-tab-group

--- a/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
@@ -21,7 +21,7 @@
 
   <div class="icons-container">
     <i class="fa-solid fa-heart" [class.favourite]="isFavorite" (click)="toggleFavourite()"></i>
-    <i class="fa-solid fa-info"></i>
+    <i class="fa-solid fa-info" (click)="openInfo()"></i>
   </div>
 </div>
 
