--- a/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
@@ -5,7 +5,7 @@
     <div class="icons-container">
       <div class="rating-container">
         <i class="fa-solid fa-star"></i>
-        <h5>{{ getAverageRating() }}</h5>
+        <h5>{{ getAverageRating() | number:'1.1-1' }}</h5>
         <h6>({{getRatingLength() }})</h6>
       </div>
       <div class="description-item" >
