--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,3 +12,9 @@ html, body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+.mat-tab-group.mat-primary .mat-ink-bar {
+  height: 20px; /* Adjust the height to increase the thickness */
+}
+
+
