--- a/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="description-item" >
         <i class="fa-solid fa-truck"></i>
-        <h5>{{restaurant.delivery.deliveryPrice}} zł</h5>
+        <h5>{{restaurant.delivery.deliveryPrice | number:'1.2-2'}} zł</h5>
       </div>
       <div class="description-item" >
         <i class="fa-regular fa-clock"></i>
