Restaurant Info done

--- a/frontend/src/app/components/restaurant-menu-components/info-dialog/info-dialog.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/info-dialog/info-dialog.component.html
@@ -5,7 +5,7 @@
 
 <mat-tab-group class="info-dialog">
   <mat-tab label="{{getTranslation('info')}}">
-    <app-info [restaurantId]="restaurantId"></app-info>
+    <app-info [restaurantId]="restaurantId" [restaurantName]="restaurantName"></app-info>
   </mat-tab>
 
   <mat-tab label='{{getTranslation("reviews")}}'>
