--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.css
@@ -14,7 +14,7 @@
   height: 30px;
 }
 
-.fa-clock {
+.fa-clock, .fa-file-invoice-dollar, .fa-credit-card, .fa-circle-question {
   font-size: 24px;
   margin-right: 15px;
 }
@@ -25,7 +25,8 @@
   justify-content: space-between;
   width: 100%;
   height: auto;
-  margin: 10px 0 10px 0;
+  padding: 10px;
+  margin: 10px 0 30px 0;
   background-color: #e8e6e6;
   border-radius: 20px;
   border: 1px solid #a1a0a0;
@@ -47,5 +48,33 @@
 }
 
 .payment {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  height: auto;
+  margin: auto;
+}
 
+.payment-item {
+  width: 80px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  background-color: white;
+  border: 0.1px solid #a1a0a0;
+  border-radius: 10px;
+}
+
+.payment-item img {
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
+}
+
+.info-item {
+  margin: 10px 0 10px 20px;
 }
