--- a/frontend/src/app/components/restaurant-menu-components/opinion-item/opinion-item.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/opinion-item/opinion-item.component.css
@@ -1,7 +1,7 @@
 .opinion-container {
   display: flex;
   flex-direction: column;
-  width: 450px;
+  width: 420px;
   height: auto;
   border-radius: 10px;
   border: #cccccc solid 1px;
@@ -24,9 +24,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 50%;
+  width: 80%;
   height: auto;
   align-items: center;
+}
+
+.quantityP {
+  margin-left: 20px;
+}
+
+.deliveryP {
+  margin-right: 10px;
 }
 
 rating-stars {
