--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.css
@@ -95,6 +95,13 @@ h5 {
   display: none;
 }
 
+.amount {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+
+}
 .summary-container {
   width: 85%;
   height: auto;
@@ -129,7 +136,16 @@ h5 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #d2d2d2 ; /* Add this line */
+  background-color: whitesmoke;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.missing-container {
+  font-size: 11px;
+  background-color: #ffe0c6;
+  border-radius: 10px;
+  padding: 0 10px 0 10px;
 }
 
 .order-button {
@@ -144,6 +160,12 @@ h5 {
   font-weight: bolder;
   align-self: center; /* Center the button horizontally */
   margin-bottom: 20px;
+}
+
+.order-button.invalid {
+  background-color: gray;
+  color: white;
+  cursor: not-allowed;
 }
 
 order-button:hover {
