--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
@@ -33,6 +33,13 @@
       ></app-restaurant-basket-item>
     </div>
 
+    <div class="missing-container" *ngIf="!isPriceValid">
+      <p>{{getTranslation('minimumOrder')}} {{missingPrice | number:'1.2-2'}} zł</p>
+    </div>
+
+
+
+
     <div class="summary-container">
       <div class="first-container">
         <p>{{getTranslation('together')}}</p>
@@ -46,7 +53,9 @@
         <h3>{{getTranslation('total')}}</h3>
         <h3>{{totalPrice | number: '1.2-2'}} zł</h3>
       </div>
-      <button class="order-button" type="submit">{{getTranslation('orderNow')}} ({{totalPrice | number: '1.2-2'}} zł)</button>
+      <button class="order-button" [ngClass]="{'invalid': !isPriceValid}" [disabled]="!isPriceValid" type="submit">
+        {{getTranslation('orderNow')}} ({{totalPrice | number: '1.2-2'}} zł)
+      </button>
     </div>
 
   </ng-container>
