Added menu favourite

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -67,5 +67,6 @@
 <app-menu-addresses *ngIf="showAddresses"></app-menu-addresses>
 <app-menu-add-address *ngIf="showAddAddress"></app-menu-add-address>
 <app-menu-address-change *ngIf="showChangeAddress"></app-menu-address-change>
+<app-menu-favourite *ngIf="showFavourite"></app-menu-favourite>
 
 
