--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -23,7 +23,7 @@
     <i class="fa-solid fa-bag-shopping"></i>
     <h3>{{getTranslation('orders')}}</h3>
   </div>
-  <div class="menu-item">
+  <div class="menu-item" [routerLink]="[]" [fragment]="checkAuth() ? 'favourite' : 'login'">
     <i class="fa-solid fa-heart"></i>
     <h3>{{getTranslation('favourites')}}</h3>
   </div>
