--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -155,7 +155,7 @@
 
 .language-dropdown {
   top: 80px;
-  left: 1270px;
+  right: 0;
   width: auto;
   padding: 10px 30px;
   text-align: center;
