Added resposive in menu favourite

--- a/frontend/src/app/components/menu-components/menu-fav-item/menu-fav-item.component.html
+++ b/frontend/src/app/components/menu-components/menu-fav-item/menu-fav-item.component.html
@@ -4,9 +4,12 @@
     <h3> {{favourite.restaurantName}}</h3>
 
     <div class="rating-container">
-      <i class="fa-solid fa-star"></i>
-      <h5>{{averageRating}}</h5>
-      <h6>({{ratingLength}})</h6>
+      <div class="rating">
+        <i class="fa-solid fa-star"></i>
+        <h5>{{averageRating}}</h5>
+        <h6>({{ratingLength}})</h6>
+      </div>
+
       <p> {{favourite.restaurantCategory}}</p>
     </div>
 
