--- a/frontend/src/app/components/menu-components/menu-fav-item/menu-fav-item.component.css
+++ b/frontend/src/app/components/menu-components/menu-fav-item/menu-fav-item.component.css
@@ -21,6 +21,14 @@ img {
   height: 40px;
 }
 
+.rating {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 20px;
+
+}
+
 .rating-container h5 {
   font-weight: bolder;
   margin-right: 5px;
@@ -66,3 +74,26 @@ h6 {
   background-color: #c2c2c2;
 }
 
+@media (max-width: 1024px) {
+  img {
+    width: 70px;
+    height: 60px;
+  }
+
+  .fav-container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    border-radius: 0;
+    max-height: 100%;
+  }
+
+  .rating-container {
+    flex-direction: column;
+    height: auto
+  }
+
+  .location {
+    height: 20px;
+  }
+}
