--- a/frontend/src/app/components/menu-components/menu-favourite/menu-favourite.component.css
+++ b/frontend/src/app/components/menu-components/menu-favourite/menu-favourite.component.css
@@ -81,3 +81,13 @@
   margin-bottom: 20px;
   align-items: center;
 }
+
+@media (max-width: 1024px) {
+  .fav-container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    border-radius: 0;
+    max-height: 100%;
+  }
+}
