Added additives to choose, frontend + backend

--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket-item/restaurant-basket-item.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket-item/restaurant-basket-item.component.html
@@ -3,10 +3,12 @@
   <p> {{orderPrice | number:'1.2-2'}} zł</p>
 </div>
 <div class="ingredients">
-  <p> {{order.ingredients}}</p>
+  <p [innerText]="formatAdditives()"></p>
 </div>
 <div class="third-section">
-  <p> {{getTranslate('edit')}}</p>
+  <div>
+    <p *ngIf="hasChooseAdditives()" (click)="openDialogToChange(order)"> {{getTranslate('edit')}}</p>
+  </div>
   <div class="quantity">
     <button (click)="removeOne()">
       <i class="fa-solid fa-minus"></i>
