--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -7,6 +7,9 @@
       <ng-container *ngIf="isMenuRoute()">
       <i class="fa-solid fa-angle-left" (click)="goToRestaurants()"></i>
     </ng-container>
+      <ng-container *ngIf="currentRoute === '/checkout'">
+        <i  class="fa-solid fa-angle-left" (click)="goToMenu()"></i>
+      </ng-container>
 
       <img class="logo" [src]="apiUrl + logo" alt="Your Image">
       <h2>Webstaurator</h2>
