--- a/frontend/src/app/components/order-components/order-basket/order-basket.component.css
+++ b/frontend/src/app/components/order-components/order-basket/order-basket.component.css
@@ -2,18 +2,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 97%;
+  width: 380px;
+  margin-left: 2px;
+  min-height: 600px;
+  height: auto;
   margin-top: 5px;
   margin-right: 5px;
   background: white;
   border-radius: 20px;
+  border: 3px solid #e8e8e8;
+  box-shadow: #b7b7b7 0 5px 10px 0;
 }
 
 h2 {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
+  color: #ff781e;
 
 }
 
@@ -138,8 +143,8 @@ h5 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fcedde;
   margin-bottom: 10px;
+  border-bottom: #d0c8c8 solid 1px;
   border-radius: 10px;
 }
 
