--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
@@ -27,8 +27,8 @@
   <ng-container *ngIf="orders.length > 0">
     <div class="cart-container">
       <app-restaurant-basket-item
-        [order]="order"
         *ngFor="let order of orders"
+        [order]="order"
         class="order-item"
       ></app-restaurant-basket-item>
     </div>
@@ -53,7 +53,7 @@
         <h3>{{getTranslation('total')}}</h3>
         <h3>{{totalPrice | number: '1.2-2'}} zł</h3>
       </div>
-      <button class="order-button" [ngClass]="{'invalid': !isPriceValid}" [disabled]="!isPriceValid" type="submit">
+      <button class="order-button" (click)="goToOrder()" [ngClass]="{'invalid': !isPriceValid}" [disabled]="!isPriceValid" type="submit">
         {{getTranslation('orderNow')}} ({{totalPrice | number: '1.2-2'}} zł)
       </button>
     </div>
