--- a/frontend/src/app/components/order-components/order-home/order-home.component.html
+++ b/frontend/src/app/components/order-components/order-home/order-home.component.html
@@ -5,6 +5,7 @@
       <button class="login" (click)="login()" >{{getTranslation('login')}}</button>
     </div>
       <app-order-delivery [addresses]="addresses"></app-order-delivery>
+      <app-order-payment></app-order-payment>
       <app-order-personal-info></app-order-personal-info>
   </div>
   <div class="basket">
