--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.html
@@ -32,7 +32,7 @@
   <div class="item-container">
     <div class="payment">
       <div class="payment-item" *ngFor="let payment of payments">
-        <img [src]="payment.src" [title]="payment.name" alt="">
+        <img [src]="payment.image" [title]="payment.method" alt="">
       </div>
     </div>
   </div>
