--- a/frontend/src/app/components/order-components/order-payment/order-payment.component.css
+++ b/frontend/src/app/components/order-components/order-payment/order-payment.component.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   height: auto;
   background-color: white;
@@ -13,5 +13,49 @@
 
 .container h3 {
   font-size: 22px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.payment {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 50px 10px 50px;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.main img {
+  width: 120px;
+  height: 100px;
+}
+
+.main p {
+  font-size: 18px;
   margin-left: 20px;
+}
+
+button {
+  margin-top: 10px;
+  width: 120px;
+  background: #fd710c;
+  color: white;
+  padding: 15px;
+  border: none;
+  border-radius: 40px;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bolder;
+  margin-bottom: 20px;
+}
+
+button:hover {
+  background: #e56613;
 }
