Added UserInfo for Order

--- a/frontend/src/app/components/order-components/order-home/order-home.component.html
+++ b/frontend/src/app/components/order-components/order-home/order-home.component.html
@@ -6,7 +6,7 @@
     </div>
       <app-order-delivery [addresses]="addresses"></app-order-delivery>
       <app-order-payment></app-order-payment>
-      <app-order-personal-info></app-order-personal-info>
+      <app-order-personal-info [userInfo]="userInfo"></app-order-personal-info>
   </div>
   <div class="basket">
     <app-order-basket></app-order-basket>
