--- a/frontend/src/app/components/order-components/order-home/order-home.component.css
+++ b/frontend/src/app/components/order-components/order-home/order-home.component.css
@@ -14,7 +14,6 @@
   width: 820px;
   height: 88%;
   overflow-y: auto;
-
 }
 
 .left-container::-webkit-scrollbar {
@@ -47,6 +46,10 @@
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.container button:hover {
+  background: #e56613;
 }
 
 .container p {
