Started Order Table and few  changes in relations and tables

--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.css
@@ -67,9 +67,9 @@
 }
 
 .payment-item img {
-  width: 80%;
-  height: 80%;
-  object-fit: cover;
+  width: 100px;
+  height: 80px;
+  object-fit: fill;
 }
 
 .info-item {
