--- a/frontend/src/app/components/order-components/order-basket-item/order-basket-item.component.html
+++ b/frontend/src/app/components/order-components/order-basket-item/order-basket-item.component.html
@@ -1,6 +1,6 @@
 <div class="name">
-  <h4> {{order.quantity}} x</h4>
-  <h5> {{order.name}}</h5>
+  <h4> {{orderMenus.quantity}} x</h4>
+  <h5> {{orderMenus.menu.name}}</h5>
   <p> {{orderPrice | number:'1.2-2'}} zł</p>
 </div>
 <div class="ingredients">
