--- a/frontend/src/app/components/order-components/order-basket/order-basket.component.css
+++ b/frontend/src/app/components/order-components/order-basket/order-basket.component.css
@@ -155,26 +155,27 @@ h5 {
   padding: 0 10px 0 10px;
 }
 
-.order-button {
-  width: 80%;
+button {
+  margin-top: 10px;
+  width: 300px;
+  height: 50px;
   background: #fd710c;
   color: white;
-  height: 50px;
+  padding: 15px;
   border: none;
   border-radius: 40px;
   font-size: 18px;
   cursor: pointer;
   font-weight: bolder;
-  align-self: center; /* Center the button horizontally */
   margin-bottom: 20px;
 }
 
-.order-button.invalid {
+button:hover {
+  background: #e56613;
+}
+
+.invalid {
   background-color: gray;
   color: white;
   cursor: not-allowed;
-}
-
-order-button:hover {
-  background: #ce5c03;
 }
