--- a/frontend/src/app/components/menu-components/menu-favourite/menu-favourite.component.html
+++ b/frontend/src/app/components/menu-components/menu-favourite/menu-favourite.component.html
@@ -1,8 +1,8 @@
 <div class="fav-container">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" [routerLink]="[]" fragment="menu"></i>
+    <i class="fa-solid fa-chevron-left" (click)="backToMenuDialog()"></i>
     <h2>{{getTranslation('favourites')}}</h2>
-    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
+    <i class="fa-regular fa-circle-xmark" (click)="closeDialog()"></i>
   </div>
 
   <div class="fav-section">
