Changed cors, add forwarding payU payment

--- a/frontend/src/app/components/order-components/order-delivery/order-delivery.component.html
+++ b/frontend/src/app/components/order-components/order-delivery/order-delivery.component.html
@@ -16,9 +16,11 @@
   </div>
 
   <div class="address" *ngIf="deliveryOption === 'pickup'">
-    <h3>{{getTranslation('mustLogin')}}</h3>
+    <h3 *ngIf="!authService.isAuthenticated()">{{getTranslation('mustLogin')}}</h3>
+    <h3 *ngIf="authService.isAuthenticated()">{{getTranslation('youAreLogin')}}</h3>
+    <i *ngIf="authService.isAuthenticated()" class="fa-solid fa-user-shield"></i>
 
-    <button (click)="openLogin()"> {{getTranslation('login')}}</button>
+    <button *ngIf="!authService.isAuthenticated()" (click)="openLogin()"> {{getTranslation('login')}}</button>
   </div>
 
 
