--- a/frontend/src/app/components/order-components/order-delivery/order-delivery.component.css
+++ b/frontend/src/app/components/order-components/order-delivery/order-delivery.component.css
@@ -39,6 +39,10 @@
   color: #fd710c;
 }
 
+.fa-user-shield {
+  margin-top: 30px;
+}
+
 button {
   margin-top: 10px;
   width: 60%;
@@ -108,8 +112,6 @@ button:hover {
 
 }
 
-
-
 .selected {
   border: 2px solid #ff9143;
 }
@@ -127,4 +129,32 @@ button:hover {
 
 .price {
   font-size: 14px; /* Adjust the font size as needed */
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  margin-left: 20px;
+
+}
+
+.input-container label {
+  color: #1c1a1a;
+  align-self: flex-start;
+  margin-bottom: 10px;
+  font-weight: bolder;
+}
+
+.input-container input {
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  border-radius: 10px;
+  padding: 5px 0 5px 10px;
+  border: 2px solid #bdbdbd;
 }
