Added orders history

--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -19,7 +19,7 @@
     <i class="fa-solid fa-house"></i>
     <h3>{{getTranslation('addresses')}}</h3>
   </div>
-  <div class="menu-item">
+  <div class="menu-item" (click)="goToOrderHistory()">
     <i class="fa-solid fa-bag-shopping"></i>
     <h3>{{getTranslation('orders')}}</h3>
   </div>
